--- a/index.html
+++ b/index.html
@@ -43,12 +43,13 @@
           <div class="payment-cancel"><span>Cancel Order</span></div>
         </div>
       </div>
-      <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="https://github.com/somu-code" target="_blank">Somnath Golui</a>.
-      </div>
     </main>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by
+      <a href="https://github.com/somu-code" target="_blank">Somnath Golui</a>.
+    </div>
   </body>
 </html>
